--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: c
+before_install:
+  - sudo apt-get update && sudo apt-get install git
 before_script:
   - git clone --depth 1 https://github.com/sstephenson/bats.git
   - export PATH=$PATH:bats/bin
